rm corrupt imgs

--- a/update_nimgs.ipynb
+++ b/update_nimgs.ipynb
@@ -131,26 +131,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>humanread</th>\n",
+       "      <th>nimgs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>n09779124</th>\n",
+       "      <td>agnostic, doubter</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n10114476</th>\n",
+       "      <td>fucker</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n03330792</th>\n",
+       "      <td>fetoscope, foetoscope</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n03473817</th>\n",
+       "      <td>habergeon</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n12904562</th>\n",
+       "      <td>Egyptian henbane, Hyoscyamus muticus</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      humanread  nimgs\n",
+       "n09779124                     agnostic, doubter     10\n",
+       "n10114476                                fucker     10\n",
+       "n03330792                 fetoscope, foetoscope     10\n",
+       "n03473817                             habergeon     10\n",
+       "n12904562  Egyptian henbane, Hyoscyamus muticus     10"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
     "def some(x, n):\n",
     "    return x.loc[random.sample(set(x.index), n)]\n",
     "\n",
-    "show={id_: [id2word[id_],nimg_ ] for id_,nimg_ in zip(names[:7619],nimgs[:7619]) }\n",
+    "show={id_: [id2word[id_],nimg_ ] for id_,nimg_ in zip(names[:7632],nimgs[:7632]) }\n",
     "res=[]\n",
     "for nimg_,df_ in  pd.DataFrame.from_dict(show, orient='index').groupby(1):\n",
     "#     nimg_\n",
     "    dft=some(df_,min(10,df_.index.shape[0]))\n",
     "    res.append(dft)\n",
     "show_df=pd.concat(res)    \n",
-    "\n",
-    "show_df.to_excel('show.xlsx')"
+    "show_df.columns=['humanread','nimgs']\n",
+    "show_df.head()\n",
+    "# show_df.to_excel('show.xlsx')"
    ]
   },
   {
