try to fix imglst

--- a/regen_imglst.ipynb
+++ b/regen_imglst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,34 +35,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# prefix='/mnt/nfs1703/kchen/imagenet-raw'\n",
-    "\n",
-    "# leaves = {}\n",
-    "# for node in os.listdir(prefix):\n",
-    "#     if node.startswith('n'):\n",
-    "#         leaves[node] = len(os.listdir(prefix + '/' + node))\n",
-    "\n",
-    "# mypickle(leaves,'nimgs.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# unpickle(leaves,'nimgs.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pickle into nimgs.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "prefix='/mnt/nfs1703/kchen/imagenet-raw'\n",
+    "leaves = {}\n",
+    "for node in os.listdir(prefix):\n",
+    "    if node.startswith('n'):\n",
+    "        leaves[node] = (os.listdir(prefix + '/' + node))\n",
+    "\n",
+    "mypickle(leaves,'nimgs.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['n00006024',\n",
+       " 'n00021265',\n",
+       " 'n00120010',\n",
+       " 'n00288190',\n",
+       " 'n00288384',\n",
+       " 'n00324978',\n",
+       " 'n00326094',\n",
+       " 'n00434075',\n",
+       " 'n00440039',\n",
+       " 'n00440382']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[['n00006024_13.JPEG']]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leaves=unpickle('nimgs.pkl')\n",
+    "list(leaves.keys())[:10]\n",
+    "list(leaves.values())[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "data": {
       "text/html": [
@@ -121,50 +170,10 @@
        "n00015388/n00015388_11286.JPEG  1"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
-    {
-     "data": {
-      "text/plain": [
-       "'n04055447/n04055447_726.JPEG'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path='/home/wangxinglu/prj/few-shot/data/imglst/img10k.test.txt'\n",
-    "al=np.asarray(read_list(path))\n",
-    "fail=np.concatenate(\n",
-    "    [np.asarray(read_list('/home/wangxinglu/corrupt.txt')),\n",
-    "    np.asarray(read_list('/home/wangxinglu/small.txt'))]\n",
-    ")\n",
-    "prefix='/home/wangxinglu/prj/few-shot/data/imagenet-raw/'\n",
-    "\n",
-    "al=pd.DataFrame(data=al[:,1],index=al[:,0])\n",
-    "def func(x):\n",
-    "    return '/'.join(x.split('/')[-2:])\n",
-    "fail=np.asarray(pd.DataFrame(data=fail).applymap(func))[:,0]\n",
-    "\n",
-    "al.head()\n",
-    "al=al.drop(fail,errors='ignore')\n",
-    "\n",
-    "assert fail[0] not in al.index\n",
-    "fail[0]\n",
-    "\n",
-    "res=np.asarray(al.to_records().tolist())\n",
-    "write_list(path, res,fmt='%s')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
     {
      "data": {
       "text/html": [
@@ -191,24 +200,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>n00015388/n00015388_10082.JPEG</th>\n",
+       "      <th>n00015388/n00015388_10181.JPEG</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>n00015388/n00015388_10113.JPEG</th>\n",
+       "      <th>n00015388/n00015388_10238.JPEG</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>n00015388/n00015388_10201.JPEG</th>\n",
+       "      <th>n00015388/n00015388_10397.JPEG</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>n00015388/n00015388_10257.JPEG</th>\n",
-       "      <td>0</td>\n",
+       "      <th>n00015388/n00015388_10779.JPEG</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>n00015388/n00015388_10315.JPEG</th>\n",
-       "      <td>0</td>\n",
+       "      <th>n00015388/n00015388_11286.JPEG</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -216,28 +225,51 @@
       ],
       "text/plain": [
        "                                0\n",
-       "n00015388/n00015388_10082.JPEG  0\n",
-       "n00015388/n00015388_10113.JPEG  0\n",
-       "n00015388/n00015388_10201.JPEG  0\n",
-       "n00015388/n00015388_10257.JPEG  0\n",
-       "n00015388/n00015388_10315.JPEG  0"
+       "n00015388/n00015388_10181.JPEG  0\n",
+       "n00015388/n00015388_10238.JPEG  0\n",
+       "n00015388/n00015388_10397.JPEG  0\n",
+       "n00015388/n00015388_10779.JPEG  1\n",
+       "n00015388/n00015388_11286.JPEG  1"
       ]
      },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'n04055447/n04055447_726.JPEG'"
-      ]
-     },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "path='/home/wangxinglu/prj/few-shot/data/imglst/img10k.test.txt'\n",
+    "al=np.asarray(read_list(path))\n",
+    "fail=np.concatenate(\n",
+    "    [np.asarray(read_list('/home/wangxinglu/corrupt.txt')),\n",
+    "    np.asarray(read_list('/home/wangxinglu/small.txt'))]\n",
+    ")\n",
+    "prefix='/home/wangxinglu/prj/few-shot/data/imagenet-raw/'\n",
+    "\n",
+    "al=pd.DataFrame(data=al[:,1],index=al[:,0])\n",
+    "def func(x):\n",
+    "    return '/'.join(x.split('/')[-2:])\n",
+    "fail=np.asarray(pd.DataFrame(data=fail).applymap(func))[:,0]\n",
+    "fail=np.intersect1d(np.asarray(al.index),fail)\n",
+    "fail\n",
+    "\n",
+    "al.head()\n",
+    "al=al.drop(fail ) \n",
+    "al.head() \n",
+    "# assert fail[0] not in al.index\n",
+    "# fail[0]\n",
+    "\n",
+    "# res=np.asarray(al.to_records().tolist())\n",
+    "# write_list(path, res,fmt='%s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "path='/home/wangxinglu/prj/few-shot/data/imglst/img10k.train.txt'\n",
     "al=np.asarray(read_list(path))\n",
@@ -251,25 +283,30 @@
     "def func(x):\n",
     "    return '/'.join(x.split('/')[-2:])\n",
     "fail=np.asarray(pd.DataFrame(data=fail).applymap(func))[:,0]\n",
+    "fail=np.intersect1d(np.asarray(al.index),fail)\n",
+    "fail\n",
     "\n",
     "al.head()\n",
-    "al=al.drop(fail,errors='ignore')\n",
+    "al=al.drop(fail )\n",
+    "al.head()\n",
+    "# assert fail[0] not in al.index\n",
+    "# fail[0]\n",
     "\n",
-    "assert fail[0] not in al.index\n",
-    "fail[0]\n",
-    "\n",
-    "res=np.asarray(al.to_records().tolist())\n",
-    "write_list(path, res,fmt='%s')"
+    "# res=np.asarray(al.to_records().tolist())\n",
+    "# write_list(path, res,fmt='%s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prefix='/home/wangxinglu/prj/few-shot/data/imagenet-raw/'\n",
+    "for path in fail:\n",
+    "    if osp.exists(prefix+path):\n",
+    "        shutil.move(prefix+path,'/home/wangxinglu/corrupt')        "
+   ]
   }
  ],
  "metadata": {
